@@ -5,5 +5,6 @@ lib/menu.py
 lib/preferences.py
 lib/plugins/base.py
 lib/plugins/flickr.py
+lib/plugins/fspot.py
 lib/plugins/tumblr.py
 lib/plugins/rss.py
